--- a/index.html
+++ b/index.html
@@ -3,18 +3,19 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>casa-comunitaria-digital</title>
-    <meta name="description" content="Lovable Generated Project" />
-    <meta name="author" content="Lovable" />
+    <title>Quincenalia</title>
+    <meta name="description" content="Quincenalia, otra manera de veranear" />
+    <meta name="author" content="Quincenalia" />
 
-    <meta property="og:title" content="casa-comunitaria-digital" />
-    <meta property="og:description" content="Lovable Generated Project" />
+    <meta property="og:title" content="Quincenalia" />
+    <meta property="og:description" content="Quincenalia, otra manera de veranear" />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
 
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@lovable_dev" />
     <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
   </head>
 
   <body>
